--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,7 +23,9 @@
             <label for="">Crie uma senha:</label>
             <input type="password" class="password" name="passwordInput">
             <button type="submit" class="btnInput">Cadastrar</button>
-            <p class="statusForm"></p>
+            <p class="statusForm">
+        
+            </p>
         </form>
     </section>
 
@@ -32,5 +34,7 @@
             Developed by <a href="#">Vinicius Soares</a>
         </p>
     </section>
+
+    <script src="/public/assets/js/login.js"></script>
 </body>
 </html>
