--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,12 +16,22 @@
     <section class="main">
         <form action="/betsresult" method="POST" class="formBet">
             <h2 class="tittle-form">Iniciar apostas</h2>
+            <p class="moneyUser">
+               
+            </p>
             <p class="description-form">Escolha um número de 0 a 100</p>
             <label for="">Em qual número você aposta?</label>
-            <input type="number" name="numberBet">
+            <input type="text" class="numberBet" name="numberBet">
             <label for="">Qual valor você deseja apostar?</label>
-            <input type="number" name="valueUser">
+            <input type="text" class="valueUser" name="valueUser">
             <button type="submit" class="initialBet">Apostar</button>
+            <p class="resUser">
+
+            </p>
+
+            <p class="resBets">
+
+            </p>
         </form>
 
     </section>
@@ -29,5 +39,6 @@
     <section class="footer">
         <p   class="description-footer">Developed by <a href="#">Vinicius Soares</a></p>
     </section>
+
 </body>
 </html>
