--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,7 +22,8 @@
             <p class="description-form">Escolha um número de 0 a 100</p>
             <label for="">Em qual número você aposta?</label>
             <input type="text" class="numberBet" name="numberBet">
-            <label for="">Qual valor você deseja apostar?</label>
+            <label for="">Qual valor você deseja apostar? </label>
+            <p class="descriptionValue">(Você inicia com o valor de 30 moedas).</p>
             <input type="text" class="valueUser" name="valueUser">
             <button type="submit" class="initialBet">Apostar</button>
             <p class="resUser">
@@ -40,5 +41,7 @@
         <p   class="description-footer">Developed by <a href="#">Vinicius Soares</a></p>
     </section>
 
+
+    <script src="/public/assets/js/home.js"></script>
 </body>
 </html>
