--- a/views/result.ejs
+++ b/views/result.ejs
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Resultado da aposta</h1>
-    <p>Dinheiro final: <%= {coin} %> </p>
+    <p>Dinheiro final: <%= coins %> </p>
 </body>
 </html>
