--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -78,7 +78,12 @@ body {
 .main > .formBet > label {
     font-family: var(--font-secundary);
     font-weight: bold;
-    margin-bottom: 0.7em;
+    margin-bottom: 0.5em;
+}
+
+.main > .formBet > .descriptionValue {
+    font-size: 0.6em;
+    font-family: var(--font-secundary);
 }
 
 .main > .formBet > input {
